2006-01-20  Prakash Punnoor <prakash@punnoor.de>

	* admin/CMakeModules/FindCompilerVisibility.cmake: fix result always
	set to true and include debugging output; minor indenting
	
	* admin/CMakeModules/FindPkgConfig.cmake: filter out ENTER lines
	
	* CMakeLists.txt: better defines handling and more debugging output

2006-01-18 Erik Hofman <erik@ehofman.com>

	* src/backends/alc_backend_irix.c: Rename a few instances of
	dmediadevice to dmedia instead. IRIX is working again.

2006-01-17  Erik Hofman <erik@ehofman.com>

	* src/al_buffer.c, src/al_buffer.h, src/al_main.c,
	  src/audioconvert/ac_misc.c, src/audioconvert/audioconvert.h,
	  src/extensions/al_ext_capture.c: Finish what someone else started,
	convert void* to const void* to get it compiling for IRIX' MIPSpro
	compiler, add the usleep functio n for IRIX.

	* src/backends/alc_backend.h: Fix a typo: alcBackendOpenDMedia instead
	of alcBackendOpenDMedia_

2006-01-17  Prakash Punnoor <prakash@punnoor.de>

	* test/testrotatesound.c: added
	
	* test/testvorbis.c: don't loop
	
	* src/extensions/al_ext_vorbis.c: fix vorbis not flushing samples and
	bug in seek routine
	
	* CMakeLists.txt: work around CMake bug for visibility test and
	add testrotatesound to tests; add DMedia detection; remove stray ENDIF
	and deactivate DirectSound support (as it doesn't exist); factor out
	some detection routines
	
	* src/backends/alc_backend.c, src/backends/alc_backend.h,
	src/backends/alc_backend_irix.c, configure.ac: make an independent
	"dmedia" back-end of IRIX native
	
	* configure.ac, src/extensions/al_ext_mp3.c: Use OPENAL_DLOPEN_MP3
	instead of OPENAL_DLOPEN_SMPEG. This more macro friendly (currently
	in CMake project, only)
	
	* admin/CMakeModules/FindCompilerAttribute.cmake,
	admin/CMakeModules/FindCompilerVisibility.cmake: added
	
2006-01-17  Sven Panne  <sven.panne@aedion.de>

	* src/alc/alc_context.c: Make sure that the speakers are moved to their
	initial position at context creation time. The whole logic of state