@@ -353,7 +353,7 @@ ENDIF(MOSTHREAD_AVAILABLE)
 FIND_PACKAGE(PkgConfig)
 
 MACRO(CHECK_BACKEND BACKEND_OPTION BACKEND_NAME BACKEND_LIB BACKEND_HEADER BACKEND_TEST_FUNC)
-IF(${BACKEND_OPTION} AND NOT ${BACKEND_OPTION}_FOUND)
+IF(${BACKEND_OPTION} AND NOT ${BACKEND_OPTION}_FOUND MATCHES "1${${BACKEND_OPTION}_DLOPEN}")
   IF(CMAKE_PKGCONFIG_EXECUTABLE AND NOT ${BACKEND_NAME} MATCHES "^$")
     PKGCONFIG(${BACKEND_NAME}
               BACKEND_HAVE
@@ -393,7 +393,7 @@ int main(){return 0;}
 
   IF(HAVE_BACKEND_HEADER)
     IF(HAVE_LIB_DL AND ${BACKEND_OPTION}_DLOPEN)
-      SET(${BACKEND_OPTION}_FOUND ON CACHE INTERNAL "")
+      SET(${BACKEND_OPTION}_FOUND "1${${BACKEND_OPTION}_DLOPEN}" CACHE INTERNAL "")
     ELSE(HAVE_LIB_DL AND ${BACKEND_OPTION}_DLOPEN)
 
       IF(${BACKEND_OPTION}_LIBS MATCHES "^$")
@@ -426,7 +426,7 @@ int main(){return 0;}
                    "Source file was:\n${SOURCE}\n" APPEND)
 
         IF(BACKEND_LINKS)
-          SET(${BACKEND_OPTION}_FOUND ON CACHE INTERNAL "")
+          SET(${BACKEND_OPTION}_FOUND "1${${BACKEND_OPTION}_DLOPEN}" CACHE INTERNAL "")
         ELSE(BACKEND_LINKS)
 
           MESSAGE(STATUS "${BACKEND_OPTION} doesn't link.")
@@ -437,9 +437,9 @@ int main(){return 0;}
 
     MESSAGE(STATUS "${BACKEND_OPTION} header ${BACKEND_HEADER} not found.")
   ENDIF(HAVE_BACKEND_HEADER)
-ENDIF(${BACKEND_OPTION} AND NOT ${BACKEND_OPTION}_FOUND)
+ENDIF(${BACKEND_OPTION} AND NOT ${BACKEND_OPTION}_FOUND MATCHES "1${${BACKEND_OPTION}_DLOPEN}")
 
-IF(${BACKEND_OPTION} AND ${BACKEND_OPTION}_FOUND)
+IF(${BACKEND_OPTION} AND ${BACKEND_OPTION}_FOUND MATCHES "1${${BACKEND_OPTION}_DLOPEN}")
   SET(OS_OBJS ${OS_OBJS} ${${BACKEND_OPTION}_OBJS})
   # kinda hack, but won't hurt
   ADD_DEFINE(USE_BACKEND_${BACKEND_OPTION})
@@ -457,11 +457,11 @@ IF(${BACKEND_OPTION} AND ${BACKEND_OPTION}_FOUND)
     LINK_DIRECTORIES(${${BACKEND_OPTION}_LINK_DIRS})
     MESSAGE(STATUS "${BACKEND_OPTION} support - static")
   ENDIF(HAVE_LIB_DL AND ${BACKEND_OPTION}_DLOPEN)
-ELSE(${BACKEND_OPTION} AND ${BACKEND_OPTION}_FOUND)
+ELSE(${BACKEND_OPTION} AND ${BACKEND_OPTION}_FOUND MATCHES "1${${BACKEND_OPTION}_DLOPEN}")
 
   MESSAGE(STATUS "${BACKEND_OPTION} support - disabled")
   SET(${BACKEND_OPTION} OFF CACHE BOOL "" FORCE)
-ENDIF(${BACKEND_OPTION} AND ${BACKEND_OPTION}_FOUND)
+ENDIF(${BACKEND_OPTION} AND ${BACKEND_OPTION}_FOUND MATCHES "1${${BACKEND_OPTION}_DLOPEN}")
 ENDMACRO(CHECK_BACKEND)
 
 #             OPT    PKG-NAME   LIB        HEADER              TEST-FUNCTION
